# optics

dataset/amazon/: dataset.csv
dataset/euronews.com/: dataset.csv
dataset/imdb/: dataset.csv
dataset/wikipedia/: dataset.csv
fetcher/: README.md  main.py  path.py  pyproject.toml
fetcher/tests/: test_path.py
ncd/: Cargo.toml
ncd/brotli-benchmark/: Cargo.toml  benchmark.ipynb
ncd/brotli-benchmark/src/: lib.rs  main.rs
ncd/brotli-benchmark/src/lib/: dataset.rs  mod.rs
ncd/brotli-benchmark/src/lib/benchmarks/: distance_matrix.rs  mod.rs  triangle_inequality.rs
ncd/src/lib/: Cargo.toml  lib.rs
ncd/src/lib/compress/: brotli.rs  compress.rs  mod.rs
ncd/src/lib/strip/: filter_attributes.rs  mod.rs  strip_content.rs
